# csv_on_web

./: Makefile  README.md  pyproject.toml  setup.cfg
api/: api.py
src/some_lib/: __init__.py
web/templates/: index.html  tasks.html
