[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "htmx_with_fastapi"
version = "0.1.0"
description = ""
authors = [{name = "Alexandre Khalifé", email = "alexandre.khalife.oelp2@slmail.me"}]
readme = "README.md"
requires-python = ">=3.9, <3.11"
dependencies = [
    "pandas >= 2.2",
    "fastapi >= 0.111.0",
    "akutils @ git+https://github.com/Alex0x4b/akutils.git",
    "pyarrow >= 14.0.0, <= 15.0.0",
    "numpy >= 1.26.0",
    "PyYAML >= 6.0",
    "python-docx >= 1.0.1",
    "flake8 >= 5.0.4",
    "pytest >= 7.2.2",
    "pytest-cov >= 4.0.0",
    "tabulate >= 0.9.0",
    "myst-parser >= 1.0.0",
    "argcomplete >= 3.1.2",
    "openpyxl >= 3.0.10",
    "xlrd >= 2.0.1",
    "pyxlsb >= 1.0.1",
    "universal-pathlib == 0.1.4"
]

# [tool.setuptools]
# package-dir = {"" = "src"}
# include-package-data = true

# [tool.setuptools.package-data]
# my_pkg = ["**/*.csv", "**/*.txt", "**/*.yaml", "**/*.xlsx"]
