[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "todo_app_with_htmx"
version = "0.1.0"
description = ""
authors = [{name = "Alexandre Khalifé", email = "alexandre.khalife.oelp2@slmail.me"}]
readme = "README.md"
requires-python = ">=3.9, <3.11"
dependencies = [
    "pandas >= 2.2",
    "numpy >= 1.26.0",
    "fastapi >= 0.111.0",
    "Jinja2 >= 3.0",
    "uvicorn >= 0.30.0",
    "flake8 >= 5.0.4",
    "pytest >= 7.2.2",
    "pytest-cov >= 4.0.0",
    "myst-parser >= 1.0.0",
]

# [tool.setuptools]
# package-dir = {"" = "src"}
# include-package-data = true

# [tool.setuptools.package-data]
# my_pkg = ["**/*.csv", "**/*.txt", "**/*.yaml", "**/*.xlsx"]
